// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text All color variants of texts 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  display: block;
  margin: 0;
  font-size: 1rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  color: hsla(271,81%,56%,1);
}

.c1 {
  display: block;
  margin: 0;
  font-size: 1rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  color: hsla(333,71%,51%,1);
}

.c2 {
  display: block;
  margin: 0;
  font-size: 1rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  color: hsla(0,0%,32%,1);
}

.c3 {
  display: block;
  margin: 0;
  font-size: 1rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  color: hsla(221,83%,53%,1);
}

.c4 {
  display: block;
  margin: 0;
  font-size: 1rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  color: hsla(142,76%,36%,1);
}

.c5 {
  display: block;
  margin: 0;
  font-size: 1rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  color: hsla(32,95%,44%,1);
}

.c6 {
  display: block;
  margin: 0;
  font-size: 1rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  color: hsla(0,72%,51%,1);
}

<body>
    <div>
      <p
        class="c0"
        id="9f40fc19"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </p>
      <p
        class="c1"
        id="9f40fc19"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </p>
      <p
        class="c2"
        id="9f40fc19"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </p>
      <p
        class="c3"
        id="9f40fc19"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </p>
      <p
        class="c4"
        id="9f40fc19"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </p>
      <p
        class="c5"
        id="9f40fc19"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </p>
      <p
        class="c6"
        id="9f40fc19"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </p>
    </div>
  </body>,
  "container": .c0 {
  display: block;
  margin: 0;
  font-size: 1rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  color: hsla(271,81%,56%,1);
}

.c1 {
  display: block;
  margin: 0;
  font-size: 1rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  color: hsla(333,71%,51%,1);
}

.c2 {
  display: block;
  margin: 0;
  font-size: 1rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  color: hsla(0,0%,32%,1);
}

.c3 {
  display: block;
  margin: 0;
  font-size: 1rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  color: hsla(221,83%,53%,1);
}

.c4 {
  display: block;
  margin: 0;
  font-size: 1rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  color: hsla(142,76%,36%,1);
}

.c5 {
  display: block;
  margin: 0;
  font-size: 1rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  color: hsla(32,95%,44%,1);
}

.c6 {
  display: block;
  margin: 0;
  font-size: 1rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  color: hsla(0,72%,51%,1);
}

<div>
    <p
      class="c0"
      id="9f40fc19"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </p>
    <p
      class="c1"
      id="9f40fc19"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </p>
    <p
      class="c2"
      id="9f40fc19"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </p>
    <p
      class="c3"
      id="9f40fc19"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </p>
    <p
      class="c4"
      id="9f40fc19"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </p>
    <p
      class="c5"
      id="9f40fc19"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </p>
    <p
      class="c6"
      id="9f40fc19"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </p>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Text All other forms of text 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  display: block;
  margin: 0;
  font-size: 1rem;
  color: hsla(217,33%,17%,1);
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  font-weight: 700;
}

.c1 {
  display: block;
  margin: 0;
  font-size: 1rem;
  color: hsla(217,33%,17%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 {
  display: block;
  margin: 0;
  font-size: 1rem;
  color: hsla(217,33%,17%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  font-style: italic;
}

.c3 {
  display: block;
  margin: 0;
  font-size: 1rem;
  color: hsla(217,33%,17%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  text-transform: uppercase;
}

.c4 {
  display: block;
  margin: 0;
  font-size: 1rem;
  color: hsla(217,33%,17%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  text-transform: lowercase;
}

.c5 {
  display: block;
  margin: 0;
  font-size: 1rem;
  color: hsla(217,33%,17%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  text-transform: capitalize;
}

.c6 {
  display: block;
  margin: 0;
  font-size: 1rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  color: hsla(0,0%,0%,0.38);
}

.c7 {
  display: block;
  margin: 0;
  font-size: 1rem;
  color: hsla(217,33%,17%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  width: 100%;
}

.c8 {
  display: block;
  margin: 0;
  font-size: 1rem;
  color: hsla(217,33%,17%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  text-align: center;
}

.c9 {
  display: block;
  margin: 0;
  font-size: 1rem;
  color: hsla(217,33%,17%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<body>
    <div>
      <p
        class="c0"
        id="10875d0d"
        role="text"
      >
        bold: The quick brown fox jumps over the lazy dog
      </p>
      <p
        class="c1"
        id="df0ed3cf"
        role="text"
      >
        underlined: The quick brown fox jumps over the lazy dog
      </p>
      <p
        class="c2"
        id="0d801bb6"
        role="text"
      >
        italicized: The quick brown fox jumps over the lazy dog
      </p>
      <p
        class="c3"
        id="faf68f7f"
        role="text"
      >
        uppercase: The quick brown fox jumps over the lazy dog
      </p>
      <p
        class="c4"
        id="9ae149c0"
        role="text"
      >
        lowercase: The quick brown fox jumps over the lazy dog
      </p>
      <p
        class="c5"
        id="d59de92d"
        role="text"
      >
        capitalized: The quick brown fox jumps over the lazy dog
      </p>
      <p
        class="c6"
        id="c209f9e7"
        role="text"
      >
        disabled: The quick brown fox jumps over the lazy dog
      </p>
      <p
        class="c7"
        id="416dbd95"
        role="text"
      >
        stretched: The quick brown fox jumps over the lazy dog
      </p>
      <p
        class="c8"
        id="dd5ddd16"
        role="text"
      >
        centered: The quick brown fox jumps over the lazy dog
      </p>
      <div
        style="width: 200px;"
      >
        <p
          class="c9"
          id="849ae361"
          role="text"
        >
          truncated: The quick brown fox jumps over the lazy dog
        </p>
      </div>
    </div>
  </body>,
  "container": .c0 {
  display: block;
  margin: 0;
  font-size: 1rem;
  color: hsla(217,33%,17%,1);
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  font-weight: 700;
}

.c1 {
  display: block;
  margin: 0;
  font-size: 1rem;
  color: hsla(217,33%,17%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 {
  display: block;
  margin: 0;
  font-size: 1rem;
  color: hsla(217,33%,17%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  font-style: italic;
}

.c3 {
  display: block;
  margin: 0;
  font-size: 1rem;
  color: hsla(217,33%,17%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  text-transform: uppercase;
}

.c4 {
  display: block;
  margin: 0;
  font-size: 1rem;
  color: hsla(217,33%,17%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  text-transform: lowercase;
}

.c5 {
  display: block;
  margin: 0;
  font-size: 1rem;
  color: hsla(217,33%,17%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  text-transform: capitalize;
}

.c6 {
  display: block;
  margin: 0;
  font-size: 1rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  color: hsla(0,0%,0%,0.38);
}

.c7 {
  display: block;
  margin: 0;
  font-size: 1rem;
  color: hsla(217,33%,17%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  width: 100%;
}

.c8 {
  display: block;
  margin: 0;
  font-size: 1rem;
  color: hsla(217,33%,17%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  text-align: center;
}

.c9 {
  display: block;
  margin: 0;
  font-size: 1rem;
  color: hsla(217,33%,17%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div>
    <p
      class="c0"
      id="10875d0d"
      role="text"
    >
      bold: The quick brown fox jumps over the lazy dog
    </p>
    <p
      class="c1"
      id="df0ed3cf"
      role="text"
    >
      underlined: The quick brown fox jumps over the lazy dog
    </p>
    <p
      class="c2"
      id="0d801bb6"
      role="text"
    >
      italicized: The quick brown fox jumps over the lazy dog
    </p>
    <p
      class="c3"
      id="faf68f7f"
      role="text"
    >
      uppercase: The quick brown fox jumps over the lazy dog
    </p>
    <p
      class="c4"
      id="9ae149c0"
      role="text"
    >
      lowercase: The quick brown fox jumps over the lazy dog
    </p>
    <p
      class="c5"
      id="d59de92d"
      role="text"
    >
      capitalized: The quick brown fox jumps over the lazy dog
    </p>
    <p
      class="c6"
      id="c209f9e7"
      role="text"
    >
      disabled: The quick brown fox jumps over the lazy dog
    </p>
    <p
      class="c7"
      id="416dbd95"
      role="text"
    >
      stretched: The quick brown fox jumps over the lazy dog
    </p>
    <p
      class="c8"
      id="dd5ddd16"
      role="text"
    >
      centered: The quick brown fox jumps over the lazy dog
    </p>
    <div
      style="width: 200px;"
    >
      <p
        class="c9"
        id="849ae361"
        role="text"
      >
        truncated: The quick brown fox jumps over the lazy dog
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Text All types of texts 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c2 {
  display: none;
  cursor: pointer;
  height: 0.8em;
  width: 0.8em;
  -webkit-transform: translate(0,0.175em) rotate(-45deg);
  -ms-transform: translate(0,0.175em) rotate(-45deg);
  transform: translate(0,0.175em) rotate(-45deg);
  opacity: 0.6;
  margin-left: 0.2em;
}

.c0 {
  display: block;
  margin: 0;
  font-size: 6rem;
  color: hsla(217,33%,17%,1);
  font-weight: 300;
  -webkit-letter-spacing: -0.01562em;
  -moz-letter-spacing: -0.01562em;
  -ms-letter-spacing: -0.01562em;
  letter-spacing: -0.01562em;
  line-height: 1.167;
}

.c0:hover .c1 {
  display: inline-block;
}

.c3 {
  display: block;
  margin: 0;
  font-size: 3.75rem;
  color: hsla(217,33%,17%,1);
  font-weight: 300;
  -webkit-letter-spacing: -0.00833em;
  -moz-letter-spacing: -0.00833em;
  -ms-letter-spacing: -0.00833em;
  letter-spacing: -0.00833em;
  line-height: 1.2;
}

.c3:hover .c1 {
  display: inline-block;
}

.c4 {
  display: block;
  margin: 0;
  font-size: 3rem;
  color: hsla(217,33%,17%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0em;
  -moz-letter-spacing: 0em;
  -ms-letter-spacing: 0em;
  letter-spacing: 0em;
  line-height: 1.167;
}

.c4:hover .c1 {
  display: inline-block;
}

.c5 {
  display: block;
  margin: 0;
  font-size: 2.125rem;
  color: hsla(217,33%,17%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.00735em;
  -moz-letter-spacing: 0.00735em;
  -ms-letter-spacing: 0.00735em;
  letter-spacing: 0.00735em;
  line-height: 1.235;
}

.c5:hover .c1 {
  display: inline-block;
}

.c6 {
  display: block;
  margin: 0;
  font-size: 1.5rem;
  color: hsla(217,33%,17%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0em;
  -moz-letter-spacing: 0em;
  -ms-letter-spacing: 0em;
  letter-spacing: 0em;
  line-height: 1.334;
}

.c6:hover .c1 {
  display: inline-block;
}

.c7 {
  display: block;
  margin: 0;
  font-size: 0.875rem;
  color: hsla(217,33%,17%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.01071em;
  -moz-letter-spacing: 0.01071em;
  -ms-letter-spacing: 0.01071em;
  letter-spacing: 0.01071em;
  line-height: 1.43;
}

.c7:hover .c1 {
  display: inline-block;
}

.c8 {
  display: block;
  margin: 0;
  font-size: 1rem;
  color: hsla(217,33%,17%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
}

.c8:hover .c1 {
  display: inline-block;
}

.c9 {
  display: block;
  margin: 0;
  font-size: 0.75rem;
  color: hsla(217,33%,17%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.03333em;
  -moz-letter-spacing: 0.03333em;
  -ms-letter-spacing: 0.03333em;
  letter-spacing: 0.03333em;
  line-height: 1.66;
}

.c9:hover .c1 {
  display: inline-block;
}

.c10 {
  display: block;
  margin: 0;
  font-size: 1.25rem;
  color: hsla(217,33%,17%,1);
  font-weight: 500;
  -webkit-letter-spacing: 0.0075em;
  -moz-letter-spacing: 0.0075em;
  -ms-letter-spacing: 0.0075em;
  letter-spacing: 0.0075em;
  line-height: 1.6;
}

.c10:hover .c1 {
  display: inline-block;
}

<body>
    <div>
      <h1
        class="c0"
        id="9f40fc19"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
        <svg
          aria-hidden="true"
          class="c1 c2"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"
          />
        </svg>
      </h1>
      <h2
        class="c3"
        id="9f40fc19"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
        <svg
          aria-hidden="true"
          class="c1 c2"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"
          />
        </svg>
      </h2>
      <h3
        class="c4"
        id="9f40fc19"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
        <svg
          aria-hidden="true"
          class="c1 c2"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"
          />
        </svg>
      </h3>
      <h4
        class="c5"
        id="9f40fc19"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
        <svg
          aria-hidden="true"
          class="c1 c2"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"
          />
        </svg>
      </h4>
      <h5
        class="c6"
        id="9f40fc19"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
        <svg
          aria-hidden="true"
          class="c1 c2"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"
          />
        </svg>
      </h5>
      <span
        class="c7"
        id="9f40fc19"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </span>
      <p
        class="c8"
        id="9f40fc19"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </p>
      <p
        class="c8"
        id="9f40fc19"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </p>
      <code
        class="c9"
        id="9f40fc19"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </code>
      <span
        class="c7"
        id="9f40fc19"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </span>
      <p
        class="c8"
        id="9f40fc19"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </p>
      <h1
        class="c0"
        id="9f40fc19"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
        <svg
          aria-hidden="true"
          class="c1 c2"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"
          />
        </svg>
      </h1>
      <h2
        class="c3"
        id="9f40fc19"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
        <svg
          aria-hidden="true"
          class="c1 c2"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"
          />
        </svg>
      </h2>
      <h3
        class="c4"
        id="9f40fc19"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
        <svg
          aria-hidden="true"
          class="c1 c2"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"
          />
        </svg>
      </h3>
      <h4
        class="c5"
        id="9f40fc19"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
        <svg
          aria-hidden="true"
          class="c1 c2"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"
          />
        </svg>
      </h4>
      <h5
        class="c6"
        id="9f40fc19"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
        <svg
          aria-hidden="true"
          class="c1 c2"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"
          />
        </svg>
      </h5>
      <h6
        class="c10"
        id="9f40fc19"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
        <svg
          aria-hidden="true"
          class="c1 c2"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"
          />
        </svg>
      </h6>
    </div>
  </body>,
  "container": .c2 {
  display: none;
  cursor: pointer;
  height: 0.8em;
  width: 0.8em;
  -webkit-transform: translate(0,0.175em) rotate(-45deg);
  -ms-transform: translate(0,0.175em) rotate(-45deg);
  transform: translate(0,0.175em) rotate(-45deg);
  opacity: 0.6;
  margin-left: 0.2em;
}

.c0 {
  display: block;
  margin: 0;
  font-size: 6rem;
  color: hsla(217,33%,17%,1);
  font-weight: 300;
  -webkit-letter-spacing: -0.01562em;
  -moz-letter-spacing: -0.01562em;
  -ms-letter-spacing: -0.01562em;
  letter-spacing: -0.01562em;
  line-height: 1.167;
}

.c0:hover .c1 {
  display: inline-block;
}

.c3 {
  display: block;
  margin: 0;
  font-size: 3.75rem;
  color: hsla(217,33%,17%,1);
  font-weight: 300;
  -webkit-letter-spacing: -0.00833em;
  -moz-letter-spacing: -0.00833em;
  -ms-letter-spacing: -0.00833em;
  letter-spacing: -0.00833em;
  line-height: 1.2;
}

.c3:hover .c1 {
  display: inline-block;
}

.c4 {
  display: block;
  margin: 0;
  font-size: 3rem;
  color: hsla(217,33%,17%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0em;
  -moz-letter-spacing: 0em;
  -ms-letter-spacing: 0em;
  letter-spacing: 0em;
  line-height: 1.167;
}

.c4:hover .c1 {
  display: inline-block;
}

.c5 {
  display: block;
  margin: 0;
  font-size: 2.125rem;
  color: hsla(217,33%,17%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.00735em;
  -moz-letter-spacing: 0.00735em;
  -ms-letter-spacing: 0.00735em;
  letter-spacing: 0.00735em;
  line-height: 1.235;
}

.c5:hover .c1 {
  display: inline-block;
}

.c6 {
  display: block;
  margin: 0;
  font-size: 1.5rem;
  color: hsla(217,33%,17%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0em;
  -moz-letter-spacing: 0em;
  -ms-letter-spacing: 0em;
  letter-spacing: 0em;
  line-height: 1.334;
}

.c6:hover .c1 {
  display: inline-block;
}

.c7 {
  display: block;
  margin: 0;
  font-size: 0.875rem;
  color: hsla(217,33%,17%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.01071em;
  -moz-letter-spacing: 0.01071em;
  -ms-letter-spacing: 0.01071em;
  letter-spacing: 0.01071em;
  line-height: 1.43;
}

.c7:hover .c1 {
  display: inline-block;
}

.c8 {
  display: block;
  margin: 0;
  font-size: 1rem;
  color: hsla(217,33%,17%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
}

.c8:hover .c1 {
  display: inline-block;
}

.c9 {
  display: block;
  margin: 0;
  font-size: 0.75rem;
  color: hsla(217,33%,17%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.03333em;
  -moz-letter-spacing: 0.03333em;
  -ms-letter-spacing: 0.03333em;
  letter-spacing: 0.03333em;
  line-height: 1.66;
}

.c9:hover .c1 {
  display: inline-block;
}

.c10 {
  display: block;
  margin: 0;
  font-size: 1.25rem;
  color: hsla(217,33%,17%,1);
  font-weight: 500;
  -webkit-letter-spacing: 0.0075em;
  -moz-letter-spacing: 0.0075em;
  -ms-letter-spacing: 0.0075em;
  letter-spacing: 0.0075em;
  line-height: 1.6;
}

.c10:hover .c1 {
  display: inline-block;
}

<div>
    <h1
      class="c0"
      id="9f40fc19"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      <svg
        aria-hidden="true"
        class="c1 c2"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"
        />
      </svg>
    </h1>
    <h2
      class="c3"
      id="9f40fc19"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      <svg
        aria-hidden="true"
        class="c1 c2"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"
        />
      </svg>
    </h2>
    <h3
      class="c4"
      id="9f40fc19"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      <svg
        aria-hidden="true"
        class="c1 c2"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"
        />
      </svg>
    </h3>
    <h4
      class="c5"
      id="9f40fc19"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      <svg
        aria-hidden="true"
        class="c1 c2"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"
        />
      </svg>
    </h4>
    <h5
      class="c6"
      id="9f40fc19"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      <svg
        aria-hidden="true"
        class="c1 c2"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"
        />
      </svg>
    </h5>
    <span
      class="c7"
      id="9f40fc19"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </span>
    <p
      class="c8"
      id="9f40fc19"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </p>
    <p
      class="c8"
      id="9f40fc19"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </p>
    <code
      class="c9"
      id="9f40fc19"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </code>
    <span
      class="c7"
      id="9f40fc19"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </span>
    <p
      class="c8"
      id="9f40fc19"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </p>
    <h1
      class="c0"
      id="9f40fc19"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      <svg
        aria-hidden="true"
        class="c1 c2"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"
        />
      </svg>
    </h1>
    <h2
      class="c3"
      id="9f40fc19"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      <svg
        aria-hidden="true"
        class="c1 c2"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"
        />
      </svg>
    </h2>
    <h3
      class="c4"
      id="9f40fc19"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      <svg
        aria-hidden="true"
        class="c1 c2"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"
        />
      </svg>
    </h3>
    <h4
      class="c5"
      id="9f40fc19"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      <svg
        aria-hidden="true"
        class="c1 c2"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"
        />
      </svg>
    </h4>
    <h5
      class="c6"
      id="9f40fc19"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      <svg
        aria-hidden="true"
        class="c1 c2"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"
        />
      </svg>
    </h5>
    <h6
      class="c10"
      id="9f40fc19"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      <svg
        aria-hidden="true"
        class="c1 c2"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"
        />
      </svg>
    </h6>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Text Basic render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  display: block;
  margin: 0;
  font-size: 1rem;
  color: hsla(217,33%,17%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
}

<body>
    <div>
      <p
        class="c0"
        id="5b283192"
        role="text"
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, quae aut itaque quas reprehenderit provident, facilis laudantium facere cum velit dolorum molestiae quisquam distinctio quia illo pariatur placeat natus perferendis.
      </p>
    </div>
  </body>,
  "container": .c0 {
  display: block;
  margin: 0;
  font-size: 1rem;
  color: hsla(217,33%,17%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
}

<div>
    <p
      class="c0"
      id="5b283192"
      role="text"
    >
      Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, quae aut itaque quas reprehenderit provident, facilis laudantium facere cum velit dolorum molestiae quisquam distinctio quia illo pariatur placeat natus perferendis.
    </p>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Text Dark mode all color variants of texts 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  display: block;
  margin: 0;
  font-size: 1rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  color: hsla(271,81%,56%,1);
}

.c1 {
  display: block;
  margin: 0;
  font-size: 1rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  color: hsla(333,71%,51%,1);
}

.c2 {
  display: block;
  margin: 0;
  font-size: 1rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  color: hsla(0,0%,32%,1);
}

.c3 {
  display: block;
  margin: 0;
  font-size: 1rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  color: hsla(221,83%,53%,1);
}

.c4 {
  display: block;
  margin: 0;
  font-size: 1rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  color: hsla(142,76%,36%,1);
}

.c5 {
  display: block;
  margin: 0;
  font-size: 1rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  color: hsla(32,95%,44%,1);
}

.c6 {
  display: block;
  margin: 0;
  font-size: 1rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  color: hsla(0,72%,51%,1);
}

<body>
    <div>
      <p
        class="c0"
        id="9f40fc19"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </p>
      <p
        class="c1"
        id="9f40fc19"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </p>
      <p
        class="c2"
        id="9f40fc19"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </p>
      <p
        class="c3"
        id="9f40fc19"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </p>
      <p
        class="c4"
        id="9f40fc19"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </p>
      <p
        class="c5"
        id="9f40fc19"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </p>
      <p
        class="c6"
        id="9f40fc19"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </p>
    </div>
  </body>,
  "container": .c0 {
  display: block;
  margin: 0;
  font-size: 1rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  color: hsla(271,81%,56%,1);
}

.c1 {
  display: block;
  margin: 0;
  font-size: 1rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  color: hsla(333,71%,51%,1);
}

.c2 {
  display: block;
  margin: 0;
  font-size: 1rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  color: hsla(0,0%,32%,1);
}

.c3 {
  display: block;
  margin: 0;
  font-size: 1rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  color: hsla(221,83%,53%,1);
}

.c4 {
  display: block;
  margin: 0;
  font-size: 1rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  color: hsla(142,76%,36%,1);
}

.c5 {
  display: block;
  margin: 0;
  font-size: 1rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  color: hsla(32,95%,44%,1);
}

.c6 {
  display: block;
  margin: 0;
  font-size: 1rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  color: hsla(0,72%,51%,1);
}

<div>
    <p
      class="c0"
      id="9f40fc19"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </p>
    <p
      class="c1"
      id="9f40fc19"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </p>
    <p
      class="c2"
      id="9f40fc19"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </p>
    <p
      class="c3"
      id="9f40fc19"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </p>
    <p
      class="c4"
      id="9f40fc19"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </p>
    <p
      class="c5"
      id="9f40fc19"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </p>
    <p
      class="c6"
      id="9f40fc19"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </p>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Text With no children 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  display: block;
  margin: 0;
  font-size: 1rem;
  color: hsla(217,33%,17%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
}

<body>
    <div>
      <p
        class="c0"
        role="text"
      />
    </div>
  </body>,
  "container": .c0 {
  display: block;
  margin: 0;
  font-size: 1rem;
  color: hsla(217,33%,17%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
}

<div>
    <p
      class="c0"
      role="text"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
